attempt 2 to change blog to point to project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
+	        		<li><a href="/Pokemon_FieldStudies/">Home</a></li>
 		        	<li><a href="/Pokemon_FieldStudies/about">About</a></li>
 	        		<li><a href="/Pokemon_FieldStudies/cv">CV</a></li>
 	        		<li><a href="/Pokemon_FieldStudies/blog">Blog</a></li>
