--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="{{ baseurl }}/css/main.css">
+			<link rel="stylesheet" type="text/css" href="/Pokemon_FieldStudies/css/main.css">
 		</head>
 		<body>
 			<nav>
