--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,7 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/Pokemon_FieldStudies/css/main.css">
+			<link rel="stylesheet" type="text/css" href="{{ baseurl }}/css/main.css">
 		</head>
 		<body>
 			<nav>
