--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/Pokemon_FieldStudies/">Home</a></li>
-	        		<li><a href="/Pokemon_FieldStudies/blog">Blog</a></li>
+	        		<li><a href="{{ site.github.url }}/">Home</a></li>
+	        		<li><a href="{{ site.github.url }}/blog">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -19,7 +19,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="https://github.com/DaveRGP/Pokemon_FieldStudies">github.com/DaveRGP/Pokemon_FieldStudies</a></li>
+	        		<li><a href="{{ site.github.url }}">github.com/DaveRGP/Pokemon_FieldStudies</a></li>
 				</ul>
 			</footer>
 		</body>
