changed footer link to main.io site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="{{ site.github.url }}">github.com/DaveRGP/Pokemon_FieldStudies</a></li>
+	        		<li><a href="http://davergp.github.io/">DaveRGP</a></li>
 				</ul>
 			</footer>
 		</body>
