--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/main.css">
+			
+			<!-- syntax highlighting CSS -->
+   			<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 		</head>
 		<body>
 			<nav>
