--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/main.css">
 			
 			<!-- syntax highlighting CSS -->
-   			<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+   			<link rel="stylesheet" href="{{ site.github.url }}/css/syntax.css" type="text/css" />
 		</head>
 		<body>
 			<nav>
