--- a/css/main.css
+++ b/css/main.css
@@ -53,5 +53,9 @@ ul.posts {
 }
 
 ul.posts li {
-    list-style: none;
+    list-style: circle;
+    font-size: 1.5em;
+    line-height: 1.4em;
+    color: #333;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
