--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,6 +1,6 @@
 .highlight { background-color: #083962 }
-.highlight .c { color: #586E75 } /* Comment */
-.highlight .err { color: #93A1A1 } /* Error */
+.highlight .c { color: #2062AC } /* Comment */
+.highlight .err { color: #D5AC4A } /* Error */
 .highlight .g { color: #93A1A1 } /* Generic */
 .highlight .k { color: #859900 } /* Keyword */
 .highlight .l { color: #93A1A1 } /* Literal */
