--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,62 +1,62 @@
 .highlight { background-color: #083962 }
 .highlight .c { color: #2062AC } /* Comment */
 .highlight .err { color: #D5AC4A } /* Error */
-.highlight .g { color: #93A1A1 } /* Generic */
-.highlight .k { color: #859900 } /* Keyword */
-.highlight .l { color: #93A1A1 } /* Literal */
-.highlight .n { color: #93A1A1 } /* Name */
-.highlight .o { color: #859900 } /* Operator */
-.highlight .x { color: #CB4B16 } /* Other */
-.highlight .p { color: #93A1A1 } /* Punctuation */
-.highlight .cm { color: #586E75 } /* Comment.Multiline */
-.highlight .cp { color: #859900 } /* Comment.Preproc */
-.highlight .c1 { color: #586E75 } /* Comment.Single */
-.highlight .cs { color: #859900 } /* Comment.Special */
+.highlight .g { color: #CDCDD5 } /* Generic */
+.highlight .k { color: #4A4A4A } /* Keyword */
+.highlight .l { color: #CDCDD5 } /* Literal */
+.highlight .n { color: #CDCDD5 } /* Name */
+.highlight .o { color: #4A4A4A } /* Operator */
+.highlight .x { color: #5A3918 } /* Other */
+.highlight .p { color: #CDCDD5 } /* Punctuation */
+.highlight .cm { color: #2062AC } /* Comment.Multiline */
+.highlight .cp { color: #2062AC } /* Comment.Preproc */
+.highlight .c1 { color: #2062AC } /* Comment.Single */
+.highlight .cs { color: #2062AC } /* Comment.Special */
 .highlight .gd { color: #2AA198 } /* Generic.Deleted */
-.highlight .ge { color: #93A1A1; font-style: italic } /* Generic.Emph */
+.highlight .ge { color: #CDCDD5; font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #DC322F } /* Generic.Error */
-.highlight .gh { color: #CB4B16 } /* Generic.Heading */
-.highlight .gi { color: #859900 } /* Generic.Inserted */
-.highlight .go { color: #93A1A1 } /* Generic.Output */
-.highlight .gp { color: #93A1A1 } /* Generic.Prompt */
-.highlight .gs { color: #93A1A1; font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #CB4B16 } /* Generic.Subheading */
-.highlight .gt { color: #93A1A1 } /* Generic.Traceback */
-.highlight .kc { color: #CB4B16 } /* Keyword.Constant */
+.highlight .gh { color: #5A3918 } /* Generic.Heading */
+.highlight .gi { color: #4A4A4A } /* Generic.Inserted */
+.highlight .go { color: #CDCDD5 } /* Generic.Output */
+.highlight .gp { color: #CDCDD5 } /* Generic.Prompt */
+.highlight .gs { color: #CDCDD5; font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #5A3918 } /* Generic.Subheading */
+.highlight .gt { color: #CDCDD5 } /* Generic.Traceback */
+.highlight .kc { color: #5A3918 } /* Keyword.Constant */
 .highlight .kd { color: #268BD2 } /* Keyword.Declaration */
-.highlight .kn { color: #859900 } /* Keyword.Namespace */
-.highlight .kp { color: #859900 } /* Keyword.Pseudo */
+.highlight .kn { color: #4A4A4A } /* Keyword.Namespace */
+.highlight .kp { color: #4A4A4A } /* Keyword.Pseudo */
 .highlight .kr { color: #268BD2 } /* Keyword.Reserved */
 .highlight .kt { color: #DC322F } /* Keyword.Type */
-.highlight .ld { color: #93A1A1 } /* Literal.Date */
+.highlight .ld { color: #CDCDD5 } /* Literal.Date */
 .highlight .m { color: #2AA198 } /* Literal.Number */
 .highlight .s { color: #2AA198 } /* Literal.String */
-.highlight .na { color: #93A1A1 } /* Name.Attribute */
+.highlight .na { color: #CDCDD5 } /* Name.Attribute */
 .highlight .nb { color: #B58900 } /* Name.Builtin */
 .highlight .nc { color: #268BD2 } /* Name.Class */
-.highlight .no { color: #CB4B16 } /* Name.Constant */
+.highlight .no { color: #5A3918 } /* Name.Constant */
 .highlight .nd { color: #268BD2 } /* Name.Decorator */
-.highlight .ni { color: #CB4B16 } /* Name.Entity */
-.highlight .ne { color: #CB4B16 } /* Name.Exception */
+.highlight .ni { color: #5A3918 } /* Name.Entity */
+.highlight .ne { color: #5A3918 } /* Name.Exception */
 .highlight .nf { color: #268BD2 } /* Name.Function */
-.highlight .nl { color: #93A1A1 } /* Name.Label */
-.highlight .nn { color: #93A1A1 } /* Name.Namespace */
-.highlight .nx { color: #93A1A1 } /* Name.Other */
-.highlight .py { color: #93A1A1 } /* Name.Property */
+.highlight .nl { color: #CDCDD5 } /* Name.Label */
+.highlight .nn { color: #CDCDD5 } /* Name.Namespace */
+.highlight .nx { color: #CDCDD5 } /* Name.Other */
+.highlight .py { color: #CDCDD5 } /* Name.Property */
 .highlight .nt { color: #268BD2 } /* Name.Tag */
 .highlight .nv { color: #268BD2 } /* Name.Variable */
-.highlight .ow { color: #859900 } /* Operator.Word */
-.highlight .w { color: #93A1A1 } /* Text.Whitespace */
+.highlight .ow { color: #4A4A4A } /* Operator.Word */
+.highlight .w { color: #CDCDD5 } /* Text.Whitespace */
 .highlight .mf { color: #2AA198 } /* Literal.Number.Float */
 .highlight .mh { color: #2AA198 } /* Literal.Number.Hex */
 .highlight .mi { color: #2AA198 } /* Literal.Number.Integer */
 .highlight .mo { color: #2AA198 } /* Literal.Number.Oct */
 .highlight .sb { color: #586E75 } /* Literal.String.Backtick */
 .highlight .sc { color: #2AA198 } /* Literal.String.Char */
-.highlight .sd { color: #93A1A1 } /* Literal.String.Doc */
+.highlight .sd { color: #CDCDD5 } /* Literal.String.Doc */
 .highlight .s2 { color: #2AA198 } /* Literal.String.Double */
-.highlight .se { color: #CB4B16 } /* Literal.String.Escape */
-.highlight .sh { color: #93A1A1 } /* Literal.String.Heredoc */
+.highlight .se { color: #5A3918 } /* Literal.String.Escape */
+.highlight .sh { color: #CDCDD5 } /* Literal.String.Heredoc */
 .highlight .si { color: #2AA198 } /* Literal.String.Interpol */
 .highlight .sx { color: #2AA198 } /* Literal.String.Other */
 .highlight .sr { color: #DC322F } /* Literal.String.Regex */
