--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,37 +1,37 @@
-.highlight { background-color: #083962 }
-.highlight .c { color: #2062AC } /* Comment */
-.highlight .err { color: #D5AC4A } /* Error */
-.highlight .g { color: #CDCDD5 } /* Generic */
-.highlight .k { color: #4A4A4A } /* Keyword */
-.highlight .l { color: #CDCDD5 } /* Literal */
-.highlight .n { color: #CDCDD5 } /* Name */
-.highlight .o { color: #4A4A4A } /* Operator */
+.highlight { background-color: #eeeeff }
+.highlight .c { color: #bdbde6 } /* Comment */
+.highlight .err { color: #de3131 } /* Error */
+.highlight .g { color: #313152 } /* Generic */
+.highlight .k { color: #5a4a73 } /* Keyword */
+.highlight .l { color: #313152 } /* Literal */
+.highlight .n { color: #313152 } /* Name */
+.highlight .o { color: #5a4a73 } /* Operator */
 .highlight .x { color: #5A3918 } /* Other */
-.highlight .p { color: #CDCDD5 } /* Punctuation */
-.highlight .cm { color: #2062AC } /* Comment.Multiline */
-.highlight .cp { color: #2062AC } /* Comment.Preproc */
-.highlight .c1 { color: #2062AC } /* Comment.Single */
-.highlight .cs { color: #2062AC } /* Comment.Special */
+.highlight .p { color: #313152 } /* Punctuation */
+.highlight .cm { color: #bdbde6 } /* Comment.Multiline */
+.highlight .cp { color: #bdbde6 } /* Comment.Preproc */
+.highlight .c1 { color: #bdbde6 } /* Comment.Single */
+.highlight .cs { color: #bdbde6 } /* Comment.Special */
 .highlight .gd { color: #2AA198 } /* Generic.Deleted */
-.highlight .ge { color: #CDCDD5; font-style: italic } /* Generic.Emph */
+.highlight .ge { color: #313152; font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #DC322F } /* Generic.Error */
 .highlight .gh { color: #5A3918 } /* Generic.Heading */
-.highlight .gi { color: #4A4A4A } /* Generic.Inserted */
-.highlight .go { color: #CDCDD5 } /* Generic.Output */
-.highlight .gp { color: #CDCDD5 } /* Generic.Prompt */
-.highlight .gs { color: #CDCDD5; font-weight: bold } /* Generic.Strong */
+.highlight .gi { color: #5a4a73 } /* Generic.Inserted */
+.highlight .go { color: #313152 } /* Generic.Output */
+.highlight .gp { color: #313152 } /* Generic.Prompt */
+.highlight .gs { color: #313152; font-weight: bold } /* Generic.Strong */
 .highlight .gu { color: #5A3918 } /* Generic.Subheading */
-.highlight .gt { color: #CDCDD5 } /* Generic.Traceback */
+.highlight .gt { color: #313152 } /* Generic.Traceback */
 .highlight .kc { color: #5A3918 } /* Keyword.Constant */
 .highlight .kd { color: #268BD2 } /* Keyword.Declaration */
-.highlight .kn { color: #4A4A4A } /* Keyword.Namespace */
-.highlight .kp { color: #4A4A4A } /* Keyword.Pseudo */
+.highlight .kn { color: #5a4a73 } /* Keyword.Namespace */
+.highlight .kp { color: #5a4a73 } /* Keyword.Pseudo */
 .highlight .kr { color: #268BD2 } /* Keyword.Reserved */
 .highlight .kt { color: #DC322F } /* Keyword.Type */
-.highlight .ld { color: #CDCDD5 } /* Literal.Date */
+.highlight .ld { color: #313152 } /* Literal.Date */
 .highlight .m { color: #2AA198 } /* Literal.Number */
 .highlight .s { color: #2AA198 } /* Literal.String */
-.highlight .na { color: #CDCDD5 } /* Name.Attribute */
+.highlight .na { color: #313152 } /* Name.Attribute */
 .highlight .nb { color: #B58900 } /* Name.Builtin */
 .highlight .nc { color: #268BD2 } /* Name.Class */
 .highlight .no { color: #5A3918 } /* Name.Constant */
@@ -39,24 +39,24 @@
 .highlight .ni { color: #5A3918 } /* Name.Entity */
 .highlight .ne { color: #5A3918 } /* Name.Exception */
 .highlight .nf { color: #268BD2 } /* Name.Function */
-.highlight .nl { color: #CDCDD5 } /* Name.Label */
-.highlight .nn { color: #CDCDD5 } /* Name.Namespace */
-.highlight .nx { color: #CDCDD5 } /* Name.Other */
-.highlight .py { color: #CDCDD5 } /* Name.Property */
+.highlight .nl { color: #313152 } /* Name.Label */
+.highlight .nn { color: #313152 } /* Name.Namespace */
+.highlight .nx { color: #313152 } /* Name.Other */
+.highlight .py { color: #313152 } /* Name.Property */
 .highlight .nt { color: #268BD2 } /* Name.Tag */
 .highlight .nv { color: #268BD2 } /* Name.Variable */
-.highlight .ow { color: #4A4A4A } /* Operator.Word */
-.highlight .w { color: #CDCDD5 } /* Text.Whitespace */
+.highlight .ow { color: #5a4a73 } /* Operator.Word */
+.highlight .w { color: #313152 } /* Text.Whitespace */
 .highlight .mf { color: #2AA198 } /* Literal.Number.Float */
 .highlight .mh { color: #2AA198 } /* Literal.Number.Hex */
 .highlight .mi { color: #2AA198 } /* Literal.Number.Integer */
 .highlight .mo { color: #2AA198 } /* Literal.Number.Oct */
 .highlight .sb { color: #586E75 } /* Literal.String.Backtick */
 .highlight .sc { color: #2AA198 } /* Literal.String.Char */
-.highlight .sd { color: #CDCDD5 } /* Literal.String.Doc */
+.highlight .sd { color: #313152 } /* Literal.String.Doc */
 .highlight .s2 { color: #2AA198 } /* Literal.String.Double */
 .highlight .se { color: #5A3918 } /* Literal.String.Escape */
-.highlight .sh { color: #CDCDD5 } /* Literal.String.Heredoc */
+.highlight .sh { color: #313152 } /* Literal.String.Heredoc */
 .highlight .si { color: #2AA198 } /* Literal.String.Interpol */
 .highlight .sx { color: #2AA198 } /* Literal.String.Other */
 .highlight .sr { color: #DC322F } /* Literal.String.Regex */
