operator colour change

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -5,7 +5,7 @@
 .highlight .k { color: #5a4a73 } /* Keyword */
 .highlight .l { color: #313152 } /* Literal */
 .highlight .n { color: #313152 } /* Name */
-.highlight .o { color: #5a4a73 } /* Operator */
+.highlight .o { color: #7362ac } /* Operator */
 .highlight .x { color: #5A3918 } /* Other */
 .highlight .p { color: #313152 } /* Punctuation */
 .highlight .cm { color: #bdbde6 } /* Comment.Multiline */
