--- a/css/main.css
+++ b/css/main.css
@@ -65,3 +65,8 @@ ul.posts li {
     color: #333;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+
+.highlight {
+  font-size: 1.5em;
+  line-height: 1.4em;
+}
