Include pokemon font
Write font-face argument referencing internal font and use in h1

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Pokemon-Font', 'Arial', 'Sans-Serif';
 }
 h2 {
     font-size: 2.5em;
@@ -69,4 +69,9 @@ ul.posts li {
 .highlight {
   font-size: 1.5em;
   line-height: 1.4em;
+}
+
+@font-face {
+    font-family: Pokemon-Font;
+    src: url(pokemon_gb.ttf);
 }
