remove 'x' from h1 arguments

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Pokemon-Font', 'Arial', 'Sans-Serif';
+    font-family:Pokemon-Font, 'Arial', 'Sans-Serif';
 }
 h2 {
     font-size: 2.5em;
