--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ h1 {
 }
 h2 {
     font-size: 2.5em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'pokemon_gbregular', 'Arial', 'Sans-Serif';
 }
 h3 {
     font-size: 2em;
