--- a/css/main.css
+++ b/css/main.css
@@ -42,10 +42,12 @@ h2 {
 h3 {
     font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'pokemon_gbregular', 'Arial', 'Sans-Serif';
 }
 h4 {
     font-size: 1.7em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'pokemon_gbregular', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
@@ -70,7 +72,7 @@ ul.posts li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'pokemon_gbregular', 'Arial', 'Sans-Serif';
 }
 
 .highlight {
