--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,12 @@ body {
     width: 70%;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+nav{
+    background-color: #e60000;
+    width: 100%;
+    padding: 25px;
+    margin: 0px;
+}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
