--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,8 @@ nav ul li, footer ul li {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 a {
-    text-decoration: none;
-    color: #999;
+    text-decoration:underline;
+    color: black;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 a:hover {
