--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ a {
 }
 a:hover {
     text-decoration: underline;
-    color: #e60000;
+    color: #999;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 a.PostsLink{
