--- a/css/main.css
+++ b/css/main.css
@@ -19,15 +19,16 @@ nav{
     margin: 0px;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
-nav ul li, footer ul li {
+nav ul li, footer ul li{
     display: inline;
     margin-right: 20px;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+nav a{
+    font-family:'pokemon_gbregular', 'Arial', 'Sans-Serif';
 }
 a {
     text-decoration:underline;
